Switched to SQLite. Minor java cleanup